@@ -1,6 +1,8 @@
 0.12
 - Removed encoding from .desktop file (was deprecated)
 - Added manpage for relational-cli
+- Internally uses set instead of lists to describe relation's content
+- Discards the old and not so functional tlb format
 
 0.11
 - Font is set only on windows (Rev 206)
